--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -29,21 +29,21 @@
         ;
 
         ?>
+
         <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script> -->
 
         <style>
     body{
         margin: 10px;
     }
-    .visible{
-      opacity: 0;
+    .footer {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      height: 60px;
     }
         </style>
-        <script>
-    $.cookie('loggedin','false');
 
-
-        </script>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -58,8 +58,6 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                        <li class="active logout visible"><a>Logout</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
             </div>
@@ -70,8 +68,8 @@
         </div> <!-- /container -->
         <?php echo $this->inlineScript() ?>
           <hr>
-            <div class="footer">
+            <footer class="footer">
                 <p>&copy; 2017 - <?php echo date('Y') ?> by A SRICHANDRA <?php echo $this->translate('All rights reserved.') ?></p>
-            </div>
+            </footer>
     </body>
 </html>
